src/test/deca/syntax/valid/personal/while.deca
// Description:
//    Programme utilisant if else.
//
// Resultats:
//      print infini
//      ...
//
//
// Historique:
//    cree le 01/01/2025

{
    while(true){
        println("print infini");
    }
}
