src/test/deca/syntax/invalid/personal/declaration_dans_if.deca
// Description:
//    test
//
// Resultats:
//
// Historique:
//    cree le 09/01/2025

{
    if(false == true){
        print(3);
    }else if(2==2){
        print("ggr");
    } else{
        int a = 2;
    }

    
}